fix(beautify formulate):fix alignment and background colors

--- a/components/recipe/formulateRecipeCopy/CreateNewRecipe.module.scss
+++ b/components/recipe/formulateRecipeCopy/CreateNewRecipe.module.scss
@@ -1,8 +1,43 @@
 .createNewRecipeContainer {
   background-color: #ffffff;
   padding: 10px;
+  margin-right: 5px;
   height: 100%;
   position: relative;
+  border: 2px solid #f2f2f8;
+  border-radius: 7px;
+}
+
+
+.ingredientsDetails {
+
+  .table_row_calorie {
+    font-weight: 500;
+    background-color: #f1f1f1;
+    padding-right: 15px;
+    border-bottom: 1px solid #dfdddd !important;
+  }
+
+  table {
+    width: 100%;
+
+    tr {
+      display: grid;
+      grid-template-columns: 1fr 35% 14%;
+    }
+
+    tr td {
+      // background-color: red;
+      color: #000;
+      font-size: 14px;
+      padding: 10px 10px 10px 0px;
+      border-bottom: 1px solid #dfdddd !important;
+    }
+
+    tr:last-child td {
+      border: 0 !important;
+    }
+  }
 }
 
 .firstContainer {
@@ -15,6 +50,17 @@
     width: 100%;
     padding: 10px 10px 0px 10px;
   }
+}
+
+.calories__heading {
+
+  display: grid;
+  grid-template-columns: 1fr 16%;
+  font-weight: 600;
+  padding-bottom: 16px;
+  padding-top: 5px;
+  margin-bottom: 14px;
+  border-bottom: 1px solid #dfdddd !important;
 }
 
 .fileUpload {
@@ -165,6 +211,7 @@
   p {
     color: #ababab;
     font-size: 14px;
+    padding-top: 2px;
   }
 
   table {
