--- a/components/recipe/formulateRecipeCopy/formulateRecipe.module.scss
+++ b/components/recipe/formulateRecipeCopy/formulateRecipe.module.scss
@@ -30,7 +30,6 @@
   }
 
   &__formulateDiv {
-    // background-color: red;
 
     &__arrowDiv {
 
@@ -64,7 +63,7 @@
   &__sliderDiv {
 
     width: 100%;
-    min-height: 1855px;
+    min-height: 1955px;
     position: relative;
     overflow-x: hidden;
 
@@ -89,6 +88,7 @@
     }
 
     .recipeDiv {
+
       min-width:50% ;
       // margin-left: 23px;
 
