--- a/theme/accordion/accordion.module.scss
+++ b/theme/accordion/accordion.module.scss
@@ -36,7 +36,7 @@
 
 .accordianDetails {
   transition: all 0.6s;
-  padding: 0px 0px 10px 10px;
+  // padding: 0px 0px 10px 10px;
   width: 100%;
   transform: rotate(0deg);
   overflow: hidden;
