--- a/theme/recipe/sectionTitleWithIcon/SectionTitleWithIcon.module.scss
+++ b/theme/recipe/sectionTitleWithIcon/SectionTitleWithIcon.module.scss
@@ -5,7 +5,7 @@
     margin-bottom: 15px;
     border-bottom: 2px solid #bede9d;
     &__greenIconBox {
-        border-radius: 11px;
+        border-radius: 6px;
         display: inline-block;
         width: 41px;
         height: 41px;
